force-app/main/default/objects/PaymentGatewaySetting__c/PaymentGatewaySetting__c.object-meta.xml
<CustomObject>
    <description>Payment gateway settings</description>
    <label>Payment Gateway Setting</label>
    <nameField>
        <label>Payment Gateway Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateway Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>