force-app/main/default/objects/PaymentGatewaySetting__c/fields/APILogin__c.field-meta.xml
<CustomField>
    <fullName>APILogin__c</fullName>
    <description>API Login used to connect into the payment gateway</description>
    <inlineHelpText>API Login used to connect into the payment gateway</inlineHelpText>
    <label>API Login</label>
    <length>150</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>