force-app/main/default/objects/PaymentGatewaySetting__c/fields/APITransactionKey__c.field-meta.xml
<CustomField>
    <fullName>APITransactionKey__c</fullName>
    <description>API Transaction Key used to connect into the payment gateway</description>
    <inlineHelpText>API Transaction Key used to connect into the payment gateway</inlineHelpText>
    <label>API Transaction Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>