force-app/main/default/objects/PaymentGatewaySetting__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>The URL environment to perform the connection</description>
    <inlineHelpText>The URL environment to perform the connection</inlineHelpText>
    <label>Environment</label>
    <required>true</required>
    <type>Url</type>
</CustomField>